ucs-school-lib (9.0.33-5) unstable; urgency=medium

  * move test data out of python module
  * reenable test mode

 -- Daniel Troeder <troeder@univention.de>  Mon, 11 Sep 2017 18:24:50 +0200

ucs-school-lib (9.0.33-4) unstable; urgency=low

  * Bug #44408: move PyHook code to ucsschool.lib 

 -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 15:11:39 +0200

ucs-school-lib (9.0.33-3) unstable; urgency=medium

  * Bug #41994: catch only ValueError

 -- Florian Best <best@univention.de>  Mon, 22 May 2017 14:25:58 +0200

ucs-school-lib (9.0.33-2) unstable; urgency=medium

  * Bug #42408: revert accidental commit

 -- Florian Best <best@univention.de>  Mon, 08 May 2017 14:16:05 +0200

ucs-school-lib (9.0.33-1) unstable; urgency=medium

  * Bug #41994: fix an error during removing users from school

 -- Florian Best <best@univention.de>  Fri, 05 May 2017 13:39:13 +0200

ucs-school-lib (9.0.31-1) unstable; urgency=low

  * support automatic removal of secondary schools from User objects,
    including removal of groups from removed school (Bug #41910)

 -- Daniel Troeder <troeder@univention.de>  Wed, 15 Feb 2017 09:33:21 +0100

ucs-school-lib (9.0.30-1) unstable; urgency=medium

  * Bug #42399: adjust text

 -- Florian Best <best@univention.de>  Fri, 25 Nov 2016 14:44:46 +0100

ucs-school-lib (9.0.29-3) unstable; urgency=medium

  * Bug #42065: Create shares of workgroups with the host account instead of
  	e.g. the teacher

 -- Florian Best <best@univention.de>  Wed, 23 Nov 2016 11:28:45 +0100

ucs-school-lib (9.0.29-2) unstable; urgency=medium

  * Bug #42495: fix indentation

 -- Florian Best <best@univention.de>  Tue, 15 Nov 2016 13:02:26 +0100

ucs-school-lib (9.0.29-1) unstable; urgency=medium

  * Bug #42495: optimize internal handling of group modifications

 -- Florian Best <best@univention.de>  Mon, 14 Nov 2016 19:08:36 +0100

ucs-school-lib (9.0.28-2) unstable; urgency=medium

  * Bug #42399: use the correct DN string of objectExists
