@@ -1,0 +1,9 @@
+product: ucsschool
+release: "4.1"
+version: [3]
+scope: ucs_4.1-0-ucs-school-4.1r2
+src: ucs-school-lib
+fix:
+desc: |
+ * The exam mode finishes more reliable (Bug #45403).
+bug: [45403]
